# sqs-enqueue

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/configuration/: cli.rs
src/messaging/: batch.rs  client.rs  mod.rs  single.rs
