[package]
name = "sqs-enqueue"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1.86.0"
clap = { version = "4.5.49", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.8"
log = "0.4.28"
